# Game-of-GIT

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_me.sh
.claude/commands/: file.md
.claude/scripts/: file_cmd.py
docs/superpowers/plans/: 2026-04-18-quest-runner-core.md  2026-04-19-all-quests-and-gamification-plan.md
docs/superpowers/specs/: 2026-04-18-quest-runner-core-design.md  2026-04-19-all-quests-and-gamification-design.md
gameofgit/: __main__.py  app.py  ui.tcss
gameofgit/engine/: __init__.py  env.py  executor.py  parser.py  quest.py  sandbox.py  session.py  suggest.py
gameofgit/player/: model.py  store.py  tiers.py
gameofgit/quests/: __init__.py  _helpers.py  level1.py  level10.py  level2.py  level3.py  level4.py  level5.py  level6.py  level7.py  level8.py  level9.py
gameofgit/web/: __init__.py  games.py  schemas.py  server.py
gameofgit/web/static/: app.js  index.html  play.html  start.html  style.css
gameofgit/widgets/: __init__.py  quest_pane.py  shell.py
tests/: conftest.py  test_app_smoke.py  test_engine_exports.py  test_executor.py  test_level1_quests.py  test_parser.py  test_quest.py  test_sandbox.py  test_session.py  test_session_e2e.py  test_suggest.py  test_web_api.py  test_web_player_routes.py  test_web_schemas.py
tests/player/: test_model.py  test_store.py  test_tiers.py
tests/quests/: test_helpers.py  test_level10.py  test_level2.py  test_level3.py  test_level4.py  test_level5.py  test_level6.py  test_level7.py  test_level8.py  test_level9.py
