[project]
name = "gameofgit"
version = "0.0.1"
description = "Learn Git by playing."
requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gameofgit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
